--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@
     Name                 : kripton
     Author               : DexignZone
     Author Portfolio     : https://themeforest.net/user/dexignzone/portfolio
-    
+
 
 
     Table of Sass Contents
@@ -16,7 +16,7 @@
         _mixin
         _variable
 
-    2. bootstrap 
+    2. bootstrap
         -Here goes all official bootstrap scss files
 
     3. Global/Base
@@ -1887,6 +1887,10 @@ progress {
     padding: 0.5rem 1rem;
     margin: -0.5rem -1rem;
     margin-inline-end: 1rem; }
+
+    textarea {
+        resize: none;
+    }
 
 textarea.form-control {
   min-height: auto;
@@ -35550,7 +35554,7 @@ $color_pallate_15: #ed0b4c; */
 [data-theme-version="dark"] .sidebar-right {
   /* background-color: darken($primary, 15%);
 		border-radius: 12px 0 0 12px;
-			
+
         .nav-tabs {
             background-color: lighten($d-bg, 3.2%);
             border-bottom: 1px solid $d-bg;
@@ -47017,7 +47021,7 @@ $color_pallate_15: #ed0b4c; */
 [data-theme-version="dark"] .sidebar-right {
   /* background-color: darken($primary, 15%);
 		border-radius: 12px 0 0 12px;
-			
+
         .nav-tabs {
             background-color: lighten($d-bg, 3.2%);
             border-bottom: 1px solid $d-bg;
